deleted content-body, restarting

--- a/index.html
+++ b/index.html
@@ -62,135 +62,8 @@
                     <li>Privacy</li>
                 </ul>
             </div>
-            <div class="content-body">
-                <div class="projects">
-                    <div class="project-header">
-                        <h2>Your Projects</h2>
-                    </div>
-                    <div class="cards">
-                        <h3>Super Cool Project</h3>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing
-                            elit. Nihil sit sunt ut corrupti molestiae aut, quod
-                            sed nesciunt itaque commodi obcaecati neque adipisci
-                            eos? Nisi eaque vel soluta quae dolorem!
-                        </p>
-                    </div>
-                    <div class="cards">
-                        <h3>Less Cool Project</h3>
-                        <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing
-                            elit. Nihil eligendi voluptate reprehenderit nemo
-                            error quod quibusdam vel delectus! At totam velit
-                            culpa aspernatur natus, repudiandae commodi laborum
-                            tempore molestiae repellendus.
-                        </p>
-                    </div>
-                    <div class="cards">
-                        <h3>Impossible App</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Neque impedit nisi illo ab rerum atque ullam
-                            velit, vero laudantium recusandae qui nulla natus
-                            tempore ad facere nostrum doloremque labore hic!
-                        </p>
-                    </div>
-                    <div class="cards">
-                        <h3>Easy App</h3>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing
-                            elit. Earum, fugiat vel laborum quibusdam quod,
-                            culpa eaque laudantium a nesciunt odio alias!
-                            Blanditiis aspernatur deserunt placeat eum obcaecati
-                            tempore. Assumenda, unde?
-                        </p>
-                    </div>
-                    <div class="cards">
-                        <h3>Ad Blocker</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Animi ad totam ducimus itaque, sed natus
-                            doloremque vitae consectetur quos corrupti? Quas
-                            ipsa consequuntur autem velit expedita dolore minus.
-                            Consequuntur, in?
-                        </p>
-                    </div>
-                    <div class="cards">
-                        <h3>Fun Game</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Ratione earum saepe aspernatur ea
-                            necessitatibus quam voluptate unde quibusdam nobis
-                            autem. Delectus odio magni error exercitationem eos
-                            ratione laboriosam ad tempora.
-                        </p>
-                    </div>
-                </div>
-                <div class="side-content">
-                    <div class="announcements">
-                        <div class="announcement-header">
-                            <h2>Announcements</h2>
-                        </div>
-                        <div id="announcement-item-1">
-                            <h3>Site Maintenance</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit.
-                            </p>
-                        </div>
-                        <hr />
-                        <div id="announcement-item-2">
-                            <h3>Community Share Day</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit.
-                            </p>
-                        </div>
-                        <hr />
-                        <div id="announcement-item-3">
-                            <h3>Updated Policy</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="trends">
-                        <div class="trends-header"><h2>Trending</h2></div>
-                        <div class="trends-items">
-                            <div class="icon">()</div>
-                            <div class="author">
-                                @dadams
-                                <p>Make Your Own Towel</p>
-                            </div>
-                        </div>
 
-                        <div class="trends-items">
-                            <div class="icon">()</div>
-                            <div class="author">
-                                @rbradbury
-                                <p>Stories from Mars</p>
-                            </div>
-                        </div>
-
-                        <div class="trends-items">
-                            <div class="icon">()</div>
-                            <div class="author">
-                                @kvonnegut
-                                <p>Harrison's Real Issue</p>
-                            </div>
-                        </div>
-
-                        <div class="trends-items">
-                            <div class="icon">()</div>
-                            <div class="author">
-                                @cmoore
-                                <p>Whale Watching 101</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="content-body"></div>
         </div>
         <footer>
             ©aburke76&nbsp;
