added svgs, finished navbar and sidebar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
             crossorigin="anonymous"
         ></script>
         <link rel="stylesheet" href="styles.css" />
+        <style>
+            @import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap");
+        </style>
         <title>Admin Dashboard</title>
     </head>
     <body>
@@ -15,7 +18,7 @@
             <div class="navbar">
                 <div class="header">
                     <div class="search">
-                        ()
+                        <img src="images/search.svg" alt="" />
                         <input
                             type="text"
                             name="search"
@@ -24,14 +27,20 @@
                         />
                     </div>
                     <div class="user-status">
-                        <div class="notification-bell">()</div>
-                        <div class="profile-avatar">()</div>
+                        <div class="notification-bell">
+                            <img src="images/notifications.svg" alt="" />
+                        </div>
+                        <div class="profile-avatar">
+                            <img src="images/avatar.svg" alt="" />
+                        </div>
                         <div class="user-name">Alex Burke</div>
                     </div>
                 </div>
                 <div class="greeting">
                     <div class="user-greeting">
-                        <div class="avatar-large">()</div>
+                        <div class="avatar-large">
+                            <img src="images/avatar.svg" alt="" />
+                        </div>
                         <div class="hello-user">
                             <h4>Hi there,</h4>
                             <h2>Alex Burke</h2>
@@ -47,19 +56,24 @@
 
             <div class="sidebar">
                 <div class="dashboard">
-                    <h1>() Dashboard</h1>
+                    <h1>
+                        <img src="images/view-dashboard.svg" alt="" />
+                        Dashboard
+                    </h1>
                 </div>
                 <ul class="menu">
-                    <li>Home</li>
-                    <li>Profile</li>
-                    <li>Messages</li>
-                    <li>History</li>
-                    <li>Tasks</li>
-                    <li>Communities</li>
+                    <li><img src="images/home.svg" alt="" /> Home</li>
+                    <li><img src="images/profile.svg" alt="" /> Profile</li>
+                    <li><img src="images/messages.svg" alt="" /> Messages</li>
+                    <li><img src="images/history.svg" alt="" />History</li>
+                    <li><img src="images/tasks.svg" alt="" />Tasks</li>
+                    <li>
+                        <img src="images/communities.svg" alt="" />Communities
+                    </li>
                     <li>&nbsp;</li>
-                    <li>Settings</li>
-                    <li>Support</li>
-                    <li>Privacy</li>
+                    <li><img src="images/setting.svg" alt="" />Settings</li>
+                    <li><img src="images/support.svg" alt="" />Support</li>
+                    <li><img src="images/privacy.svg" alt="" />Privacy</li>
                 </ul>
             </div>
 
