--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <div class="search">
                         <img src="images/search.svg" alt="" />
                         <input
+                            class="search-bar"
                             type="text"
                             name="search"
                             id="search"
@@ -31,19 +32,19 @@
                             <img src="images/notifications.svg" alt="" />
                         </div>
                         <div class="profile-avatar">
-                            <img src="images/avatar.svg" alt="" />
+                            <img src="images/robot.svg" alt="" />
                         </div>
-                        <div class="user-name">Alex Burke</div>
+                        <div class="user-name">aburke76</div>
                     </div>
                 </div>
                 <div class="greeting">
                     <div class="user-greeting">
                         <div class="avatar-large">
-                            <img src="images/avatar.svg" alt="" />
+                            <img src="images/robot.svg" alt="" />
                         </div>
                         <div class="hello-user">
                             <h4>Hi there,</h4>
-                            <h2>Alex Burke</h2>
+                            <h2>aburke76</h2>
                         </div>
                     </div>
                     <div class="buttons">
@@ -77,7 +78,161 @@
                 </ul>
             </div>
 
-            <div class="content-body"></div>
+            <div class="content-body">
+                <div class="project-container">
+                    <h2 class="project-header">Projects</h2>
+                    <div class="project-cards">
+                        <div class="card">
+                            <div>
+                                <h2>Super Cool Project</h2>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Porro aliquam dolores maxime
+                                dolorem labore!
+                            </div>
+                            <div class="card-icons">
+                                <img src="images/favorite.svg" alt="" />
+                                <img src="images/follow.svg" alt="" />
+                                <img src="images/share.svg" alt="" />
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div>
+                                <h2>Less Cool Project</h2>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Porro aliquam dolores maxime
+                                dolorem labore!
+                            </div>
+                            <div class="card-icons">
+                                <img src="images/favorite.svg" alt="" />
+                                <img src="images/follow.svg" alt="" />
+                                <img src="images/share.svg" alt="" />
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div>
+                                <h2>Impossible App</h2>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Porro aliquam dolores maxime
+                                dolorem labore!
+                            </div>
+                            <div class="card-icons">
+                                <img src="images/favorite.svg" alt="" />
+                                <img src="images/follow.svg" alt="" />
+                                <img src="images/share.svg" alt="" />
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div>
+                                <h2>Easy Peasy App</h2>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Porro aliquam dolores maxime
+                                dolorem labore!
+                            </div>
+                            <div class="card-icons">
+                                <img src="images/favorite.svg" alt="" />
+                                <img src="images/follow.svg" alt="" />
+                                <img src="images/share.svg" alt="" />
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div>
+                                <h2>Ad Blocker</h2>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Porro aliquam dolores maxime
+                                dolorem labore!
+                            </div>
+                            <div class="card-icons">
+                                <img src="images/favorite.svg" alt="" />
+                                <img src="images/follow.svg" alt="" />
+                                <img src="images/share.svg" alt="" />
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div>
+                                <h2>Money Maker</h2>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Porro aliquam dolores maxime
+                                dolorem labore!
+                            </div>
+                            <div class="card-icons">
+                                <img src="images/favorite.svg" alt="" />
+                                <img src="images/follow.svg" alt="" />
+                                <img src="images/share.svg" alt="" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="side-content">
+                    <div class="announcement-container">
+                        <div class="announcement-header">
+                            <h2>Announcements</h2>
+                        </div>
+                        <div class="announcements">
+                            <div class="announcement">
+                                <h3 id="site-maintenance">Site Maintenance</h3>
+                                Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit.
+                            </div>
+                            <hr />
+                            <div class="announcement">
+                                <h3>Community Share Day</h3>
+                                Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit.
+                            </div>
+                            <hr />
+                            <div class="announcement">
+                                <h3>Updated Privacy Policy</h3>
+                                Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="trends-container">
+                        <div class="trend-header"><h2>Trending</h2></div>
+                        <div class="trends">
+                            <div class="trend">
+                                <img src="images/sloth.svg" alt="" />
+                                <div class="user-message">
+                                    <div class="user">@simon</div>
+                                    <div class="message">Slow Time App</div>
+                                </div>
+                            </div>
+                            <div class="trend">
+                                <img src="images/batman.svg" alt="" />
+                                <div class="user-message">
+                                    <div class="user">@bwayne</div>
+                                    <div class="message">
+                                        Crime Stopper Project
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="trend">
+                                <img
+                                    id="maul"
+                                    src="images/dv.svg"
+                                    style="width: 48px"
+                                    alt=""
+                                />
+                                <div class="user-message">
+                                    <div class="user">@martin</div>
+                                    <div class="message">
+                                        Strawberry Cake Recipe
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="trend">
+                                <img src="images/pikachu.svg" alt="" />
+                                <div class="user-message">
+                                    <div class="user">@ashk</div>
+                                    <div class="message">
+                                        Lighting Counter App
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <footer>
             ©aburke76&nbsp;
